--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ buildscript {
 //        classpath 'org.greenrobot:greendao-gradle-plugin:3.3.0'
         classpath "com.didichuxing.doraemonkit:dokitx-plugin:$dokitx_version"
         classpath "com.meituan.android.walle:plugin:$walle_version"
+        classpath 'com.tencent.mm:AndResGuard-gradle-plugin:1.2.21'
     }
 }
 
