--- a/app/build.gradle
+++ b/app/build.gradle
@@ -343,15 +343,16 @@ dependencies {
     // dataBinding和viewBinding消除模版代码的库
     implementation 'com.hi-dhl:binding:1.0.7'
 
-    def fragment_version = "1.2.5"
+    def fragment_version = "1.3.2"
 //    implementation "androidx.fragment:fragment:$fragment_version"
+    //noinspection GradleDependency
     implementation "androidx.fragment:fragment-ktx:$fragment_version"
 
-    def activity_version = "1.2.0-alpha04"
+    def activity_version = "1.3.0-alpha06"
 //    implementation "androidx.activity:activity:$activity_version"
     implementation "androidx.activity:activity-ktx:$activity_version"
 
-    def nav_version = "2.3.2"
+    def nav_version = "2.3.5"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
