添加可视化崩溃工具

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
-include ':app', ':zkplib', ':httpprotocol', ':networkmonitor'
+include ':app', ':zkplib', ':httpprotocol', ':networkmonitor', ':spiderman'
+
