--- a/app/build.gradle
+++ b/app/build.gradle
@@ -317,6 +317,7 @@ dependencies {
     implementation project(':zkplib')
     implementation project(':httpprotocol')
     implementation project(':networkmonitor')
+    implementation project(':spiderman')
 
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
