--- a/app/build.gradle
+++ b/app/build.gradle
@@ -423,7 +423,12 @@ dependencies {
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
 
+    // 美团打包
     implementation "com.meituan.android.walle:library:$walle_version"
+
+    // 合规检测
+    compileOnly 'de.robv.android.xposed:api:82'
+    compileOnly 'de.robv.android.xposed:api:82:sources'
 }
 
 walle {
