--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,6 +54,21 @@
             android:name="UMENG_CHANNEL"
             android:value="Breath" />
 
+        <!--  标志该 apk 为一个 Xposed 模块，供 Xposed 框架识别-->
+        <meta-data
+            android:name="xposedmodule"
+            android:value="true" />
+
+        <!--模块说明，一般为模块的功能描述-->
+        <meta-data
+            android:name="xposeddescription"
+            android:value="这个模块是用来检测用户隐私合规的，在用户未授权同意前，调用接口获取信息属于违规" />
+
+        <!--模块兼容版本-->
+        <meta-data
+            android:name="xposedminversion"
+            android:value="54" />
+
         <activity android:name=".component.activity.ActivitySplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
