--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,12 @@
         android:maxSdkVersion="28" />
 
     <uses-permission android:name="android.permission.REQUEST_INSTALL_PACKAGES" />
+    <!--网络状态-->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!--wifi状态-->
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!--电池-->
+    <uses-permission android:name="android.permission.REQUEST_IGNORE_BATTERY_OPTIMIZATIONS" />
 
 
     <application
@@ -77,7 +81,8 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
@@ -286,6 +291,10 @@
         <!--                android:name="com.zkp.breath.jetpack.startup.StartUpLibraryC"-->
         <!--                android:value="androidx.startup" />-->
         <!--        </provider>-->
+
+        <service
+            android:name=".component.service.AvRelayForegroundService"
+            android:exported="false" />
 
         <provider
             android:name="androidx.startup.InitializationProvider"
