--- a/app/build.gradle
+++ b/app/build.gradle
@@ -319,6 +319,8 @@ dependencies {
     implementation project(':networkmonitor')
     implementation project(':spiderman')
 
+    implementation(name: 'oaid_sdk_1.0.25', ext: 'aar')
+
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
