--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,8 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
-        // 添加多dex分包支持
+        // 添加多dex分包支持，因为安卓中方法索引值为两个字节，四位十六进制的一个数值，即[0, 0xffff]，
+        // 所以最大方法数为65536个。一旦超出了，就需要进行分包，所以我们就需要开启这个参数。
         multiDexEnabled true
         // 表明要使用AndroidJUnitRunner进行单元测试
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
@@ -34,12 +35,16 @@ android {
             abiFilters 'arm64-v8a', 'armeabi-v7a', 'x86'
         }
 
+        // 配置编译时 java 的一些参数
         javaCompileOptions {
             annotationProcessorOptions {
+                // ARouter
                 arguments = [AROUTER_MODULE_NAME: project.getName()]
+                // room
                 arguments = ["room.schemaLocation": "$projectDir/schemas".toString()]
             }
         }
+
     }
 
     // 代码扫描分析配置
@@ -94,7 +99,7 @@ android {
         }
 
         debug {
-            // 自定义的配置在对应模块的BuildConfig
+            // 自定义的配置在对应模块的BuildConfig（type，name，value）
             buildConfigField("boolean", "LOG_DEBUG", "false")
             buildConfigField("String", "URL_PERFIX", "\"https://www.baidu.com/\"")
             resValue "string", "hidden_entrance", "隐藏入口"
@@ -225,6 +230,14 @@ android {
             versionName "1.0"
 
             signingConfig signingConfigs.productBreath
+
+            // 配置可以在 AndroidManifest.xml 中替换的参数，一般用于多渠道中使用，不会在 defaultConfig 中使用。
+            // 配置可以在 AndroidManifest.xml 中替换的参数，一般用于多渠道中使用，不会在 defaultConfig 中使用。
+            manifestPlaceholders = [
+                    APP_NAME  : "Breath",
+                    ICON      : "@mipmap/ic_launcher",
+                    ROUND_ICON: "@mipmap/ic_launcher_round"
+            ]
         }
 
         productA {
@@ -312,6 +325,7 @@ dependencies {
     // datastore  （和协程依赖有冲突，可能是alpha版本的问题）
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
 
+    // 分包库
     implementation 'androidx.multidex:multidex:2.0.1'
 
     implementation project(':zkplib')
