--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,25 +56,29 @@ android {
     // 签名配置(可以定义多套签名规则)
     signingConfigs {
 
+        def keystorePropertiesFile = rootProject.file("keystore.properties")
+        def keystoreProperties = new Properties()
+        keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+
         productBreath {
-            storeFile file('signature/breath.jks')
-            storePassword '123456'
-            keyAlias = 'key'
-            keyPassword '123456'
+            storeFile file(keystoreProperties['storeFile'])
+            storePassword keystoreProperties['storePassword']
+            keyAlias = keystoreProperties['keyAlias']
+            keyPassword keystoreProperties['keyPassword']
         }
 
         productA {
-            storeFile file('signature/productA.jks')
-            storePassword '123456'
-            keyAlias = 'productA'
-            keyPassword '123456'
+            storeFile file(keystoreProperties['productA_storeFile'])
+            storePassword keystoreProperties['productA_storePassword']
+            keyAlias = keystoreProperties['productA_keyAlias']
+            keyPassword keystoreProperties['productA_keyPassword']
         }
 
         productB {
-            storeFile file('signature/productB.jks')
-            storePassword '123456'
-            keyAlias = 'productB'
-            keyPassword '123456'
+            storeFile file(keystoreProperties['productB_storeFile'])
+            storePassword keystoreProperties['productB_storePassword']
+            keyAlias = keystoreProperties['productB_keyAlias']
+            keyPassword keystoreProperties['productB_keyPassword']
         }
 
     }
