--- a/keystore.properties
+++ b/keystore.properties
@@ -3,3 +3,12 @@ storePassword=123456
 keyAlias=key
 keyPassword=123456
 
+productA_storeFile=signature/productA.jks
+productA_storePassword=123456
+productA_keyAlias=productA
+productA_keyPassword=123456
+
+productB_storeFile=signature/productB.jks
+productB_storePassword=123456
+productB_keyAlias=productB
+productB_keyPassword=123456
