添加coil图片加载库

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -305,6 +305,9 @@ dependencies {
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-android-compiler:$hilt_version"
 
+    // coil (和glide差不多)
+    implementation "io.coil-kt:coil:1.1.1"
+
     // datastore  （和协程依赖有冲突，可能是alpha版本的问题）
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
 
