添加Coil的例子

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -264,6 +264,7 @@
         <activity android:name=".component.activity.jetpack.ResultsApiActivity" />
         <activity android:name=".component.activity.jetpack.ResultsApiActivity$ResultsApiSecondActivity" />
         <activity android:name=".component.activity.jetpack.NavigationActivity" />
+        <activity android:name=".component.activity.jetpack.CoilActivity" />
 
         <activity android:name=".component.activity.BackForegroundActivity" />
 
