--- a/flavor.gradle
+++ b/flavor.gradle
@@ -65,6 +65,21 @@ android {
             }
         }
 
+        x86 {
+            dimension 'abi'
+
+            ndk {
+                abiFilters 'x86'
+            }
+        }
+
+        x86_64 {
+            dimension 'abi'
+
+            ndk {
+                abiFilters 'x86_64'
+            }
+        }
     }
 
 }
