使用splits的abi方式 替换  flavorDimensions方式。在打包的时候可以一次性打包所有的abi包

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -109,12 +109,24 @@ android {
 
     }
 
-    applicationVariants.all { variant ->
-        variant.outputs.all {
-            def time = new Date().format("yyyy-MM-dd HH:mm:ss", TimeZone.getTimeZone("UTC"))
-            def name = variant.productFlavors[0].name   // 风味包维度1（y轴）
-            def flavors = variant.productFlavors[1].name    // 风味包维度2（x轴）
-            outputFileName = "${name}_${flavors}_${variant.mergedFlavor.versionName}_${variant.buildType.name}_${time}.apk"
+    android.applicationVariants.all { variant ->
+        variant.outputs.all { output ->
+
+            def flavor = variant.productFlavors[0].name
+            def buildType = variant.buildType.name
+            def abi = output.getFilter(com.android.build.OutputFile.ABI)
+            if (abi == null) abi = "all"
+            def versionName = variant.versionName
+            def versionCode = variant.versionCode
+            def date = new Date()
+            def formattedDate = date.format('yyyyMMdd_HHmmss')
+
+            outputFileName = "${flavor}" +
+                    "${"_"}${buildType}" +
+                    "${"_"}${abi}" +
+                    "${"_vn"}${versionName}" +
+                    "${"_vc"}${versionCode}" +
+                    "${"_"}${formattedDate}.apk"
         }
     }
 
