--- a/flavor.gradle
+++ b/flavor.gradle
@@ -2,7 +2,19 @@ android {
 
     defaultConfig {
         // 风味维度，是需要结合 “产品风味（即productFlavors）” 来一起使用的。
-        flavorDimensions('product', 'abi')
+        flavorDimensions('product')
+    }
+
+    // 注意要把outputFileName
+    splits {
+        abi {
+            // 是否开启 abi 分包，默认不开启
+            enable true
+            // 清除默认架构列表，当我们开启abi 分包时，gradle会帮我们初始化一个架构列表
+            reset()
+            // 指定需要的架构
+            include 'armeabi-v7a', 'arm64-v8a', 'x86', "x86_64"
+        }
     }
 
     productFlavors {
@@ -49,37 +61,6 @@ android {
             }
         }
 
-        armV8 {
-            dimension 'abi'
-
-            ndk {
-                abiFilters 'arm64-v8a'
-            }
-        }
-
-        armV7 {
-            dimension 'abi'
-
-            ndk {
-                abiFilters 'armeabi-v7a'
-            }
-        }
-
-        x86 {
-            dimension 'abi'
-
-            ndk {
-                abiFilters 'x86'
-            }
-        }
-
-        x86_64 {
-            dimension 'abi'
-
-            ndk {
-                abiFilters 'x86_64'
-            }
-        }
     }
 
 }
